# py-streams

./: .style.yapf  pyproject.toml  requirements-dev.txt
src/py_streams/: functional.py  streams.py
tests/: test.py
